crates/tuxedo/tests/snapshots/snapshots__list_sidebar_empty_hints_text.snap
---
source: crates/tuxedo/tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  3 task DETAIL                           
                                                                                                    
 PROJECTS                  (1)  PRIORITY A  ────────────────────── priority  (A)                    
   tag with +project        1 ▸ (A) Buy milk                       created   —                      
                           (1)  PRIORITY B  ────────────────────── projects                         
 CONTEXTS                   2   (B) Call mom                       contexts                         
   tag with @context       (1)  NO PRIORITY  ─────────────────────                                  
                            3       Write up notes                 RAW                              
                                                                                                    
                                                                   (A) Buy milk                     
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL   j/k · n new · x done · dd archive · a archived · / s3 open · 2026-05-06 · tuxedo 2026.7.1
